# instabids-windsurf-boilerplate

./: .env.template  .gitignore  README.md  package.json  pyproject.toml
.adk/: components.json
.prompts/conventions/: docstring_style.md  git_commit_style.md
.prompts/meta/: choose_system_prompt.md  choose_task_prompt.md
.prompts/system/: homeowner_agent_writer.md  master_code_builder.md  outbound_recruiter_agent_writer.md  prompt_selector.md
.prompts/tasks/: create_llm_agent.md  debug_supabase.md  extend_tool.md
scripts/: fix_syntax.py  pick_free_port.py  reset_env.ps1  reset_env.sh
